syntax = "proto3";

package stats.events;

option objc_class_prefix = "WZS";
option java_multiple_files = true;
option java_package = "stats.events";

message TileParsingErrorStat {
    oneof _tile_id {
        int64 tile_id = 1;
    }
}
